<resources>
    <string name="app_name">Count</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="input_hint">请输入数据</string>
    <string name="btn_1_label">1</string>
    <string name="btn_2_label">2</string>
    <string name="btn_3_label">3</string>
    <string name="btn_4_label">4</string>
    <string name="btn_5_label">5</string>
    <string name="btn_6_label">6</string>
    <string name="btn_7_label">7</string>
    <string name="btn_8_label">8</string>
    <string name="btn_9_label">9</string>
    <string name="btn_0_label">0</string>
    <string name="btn_delete_label">删除</string>
    <string name="btn_clear_label">归零</string>
    <string name="btn_plus_label">+</string>
    <string name="btn_minus_label">-</string>
    <string name="btn_mul_label">*</string>
    <string name="btn_div_label">/</string>
    <string name="btn_dot_label">.</string>
    <string name="btn_equal_label">=</string>
    <string name="todo">TODO</string>
</resources>
